[package]
name = "ovenmitts"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["json", "secrets"] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["sqlx_sqlite"] }
sqlx = { version = "0.6", default-features = false, features = ["macros", "offline", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rand_core = "0.6"
argon2 = "0.4"
base64 = "0.13"
rand = "0.8"
rust-embed = { version = "6.4", features = ["include-exclude"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.7"
lazy_static = "1.4"
sailfish = "0.5"
