[package]
name = "ovenmitts"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.6", features = ["json", "macros"] }
axum-macros = "0.3"
tokio = { version = "1.22", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.6", features = ["sqlite", "macros", "runtime-tokio-rustls", "migrate", "offline", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
url = { version = "2.2", features = ["serde"] }
tower-cookies = "0.8"
thiserror = "1.0"
argon2 = "0.4"
rand = "0.8"
rand_core = "0.6"
base64 = "0.13"
cookie = "0.16"
regex = "1.7"
lazy_static = "1.4"
sailfish = "0.5"
rust-embed = { version = "6.4", features = ["include-exclude"] }
mime_guess = "2.0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
figment = { version = "0.10", features = ["env", "toml"] }